# orangutan

./: .clang-format  .clang-tidy  .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  README.md  REFACTOR_PLAN.md  config.example.json  config.example.toml  xmake.lua
.githooks/: pre-commit
.orangutan/plans/: prompt-engineering-overhaul.md
docs/: config-secret-protection.md  deep-analysis-report.md  plan.md  project-exploration.md  qq-channel-improvement-plan.md
harness-engineering/: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
harness-engineering/.github/: PULL_REQUEST_TEMPLATE.md  dependency-review-config.yml
harness-engineering/bench/: README.md
harness-engineering/docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CICD.md  FAST_COMPILATION.md  FRONTEND.md  HISTORY_GUIDE.md  PLANS_GUIDE.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  REPO_COLLAB_GUIDE.md  SECURITY.md  SUPPLY_CHAIN_SECURITY.md
harness-engineering/include/: README.md
harness-engineering/scripts/: backup-db.sh  bench-compare.sh  check-action-pinning.sh  check-banned-includes.sh  check-bypass-permission.sh  check-compile-budget.sh  check-deps.sh  check-docs-sync.sh  check-docs.sh  check-history-touched.sh  check-includes.sh  check-lib-parity.sh  check-macros.sh  check-pch.sh  check-pkgs-documented.sh  check-repo-hygiene.sh  check-secret-logs.sh  check-throws.sh  ci.sh  clean-build-time.sh  gen-web-types.sh  init-project.sh  measure-tu.sh  new-exec-plan.sh  new-history.sh  release-package.sh
harness-engineering/skeleton/: README.md
harness-engineering/src/: README.md
harness-engineering/tests/: README.md
prompt-web/: 01-foundation.md  02-shell.md  03-chat.md  04-blocks.md  05-pages.md  06-widgets.md  07-build.md  README.md
scripts/: build-all.sh
src/: main.cpp
src/agent/: agent-loop-history.hpp  agent-loop-memory.hpp  agent-loop-tools.hpp  agent-loop.cpp  agent-loop.hpp  history-compaction.cpp  history-compaction.hpp  session-memory.cpp  session-memory.hpp  tool-executor.cpp  tool-executor.hpp
src/app/: bootstrap.cpp  bootstrap.hpp  channel-serve.cpp  channel-serve.hpp  cli-ui.cpp  cli-ui.hpp  history-events.cpp  history-events.hpp  line-editor.cpp  line-editor.hpp  repl.cpp  repl.hpp  runtime-config-builders.hpp  session-workflow.cpp  session-workflow.hpp  single-shot.cpp  single-shot.hpp  slash-commands.cpp  slash-commands.hpp
src/automation/: action-registry.hpp  automation-store.cpp  automation-store.hpp  automation-types.cpp  automation-types.hpp  builder.cpp  builder.hpp  category.cpp  category.hpp  core-model.cpp  core-model.hpp  cron-parser.cpp  cron-parser.hpp  delivery.cpp  delivery.hpp  driver.cpp  driver.hpp  dsl.cpp  dsl.hpp  kernel.cpp  kernel.hpp  log-writer.cpp  log-writer.hpp  model.cpp  model.hpp  parser.cpp  parser.hpp  planner.cpp  planner.hpp  repository.cpp  repository.hpp  runtime.cpp  runtime.hpp  scheduler.cpp  scheduler.hpp  service.cpp  service.hpp  sqlite-store.cpp  sqlite-store.hpp  store.hpp
src/bootstrap/: agent-loop-teammate.cpp  agent-loop-teammate.hpp  agent-loop-worker.cpp  agent-loop-worker.hpp  agent-runtime.cpp  agent-runtime.hpp  app-runtime.cpp  app-runtime.hpp  automation-executor.cpp  automation-executor.hpp  bootstrap.cpp  bootstrap.hpp  channel-serve-approval.hpp  channel-serve-delivery.hpp  channel-serve-runtime.hpp  channel-serve.cpp  channel-serve.hpp  channel-session-persistence.cpp  channel-session-persistence.hpp  cli-options.cpp  cli-options.hpp  cli-runtime.cpp  cli-runtime.hpp  config-bootstrap.cpp  config-bootstrap.hpp  config-builder.cpp  config-builder.hpp  heartbeat-jobs.cpp  heartbeat-jobs.hpp  identity.cpp  identity.hpp  memory-context.cpp  memory-context.hpp  runtime-assembler.cpp  runtime-assembler.hpp  runtime-config.hpp  runtime-control.cpp  runtime-control.hpp  runtime-factory.cpp  runtime-factory.hpp
src/channel/: allowlist.hpp  channel.cpp  channel.hpp  jid-task-runner.cpp  jid-task-runner.hpp  message-queue.hpp
src/cli/: cli-ui.cpp  cli-ui.hpp  history-events.cpp  history-events.hpp  line-editor.cpp  line-editor.hpp  repl.cpp  repl.hpp  session-workflow.cpp  session-workflow.hpp  single-shot.cpp  single-shot.hpp  slash-commands.cpp  slash-commands.hpp
src/config/: config-detail.hpp  config-sections-core.cpp  config-sections-integrations.cpp  config.cpp  config.hpp  json-access.hpp  secret-fields.cpp  secret-fields.hpp  secret-protection-crypto.cpp  secret-protection-file.cpp  secret-protection-password.cpp  secret-protection.hpp
src/coordinator/: agent-definition-registry.cpp  agent-definition-registry.hpp  agent-definition.hpp  coordinator-manager.cpp  coordinator-manager.hpp  coordinator-mode.cpp  coordinator-mode.hpp  coordinator-prompt.cpp  coordinator-prompt.hpp
src/core/: types.hpp  utils.hpp
src/heartbeat/: heartbeat-automation.cpp  heartbeat-automation.hpp  heartbeat-md.cpp  heartbeat-md.hpp  heartbeat-ok.cpp  heartbeat-ok.hpp
src/hooks/: hook-manager.cpp  hook-manager.hpp
src/infra/: format.hpp  string.hpp  utf8.cpp  utf8.hpp
src/memory/: memory-age.cpp  memory-age.hpp  memory-extract.cpp  memory-extract.hpp  memory-mirror.cpp  memory-mirror.hpp  memory-schema.cpp  memory-schema.hpp  memory-search.cpp  memory-search.hpp  memory-store.cpp  memory-store.hpp  memory-type.cpp  memory-type.hpp  runtime-memory.cpp  runtime-memory.hpp
src/orchestration/: agent-definition-registry.cpp  agent-definition-registry.hpp  agent-definition.hpp  leader-mode.cpp  leader-mode.hpp  leader-prompt.cpp  leader-prompt.hpp  mailbox.cpp  mailbox.hpp  orchestration-manager.cpp  orchestration-manager.hpp  team-manager.cpp  team-manager.hpp  teammate-runtime.hpp  types.hpp  worker-runtime.hpp
src/permissions/: approval-signature.cpp  approval-signature.hpp  permission-display.hpp  permission-evaluator.cpp  permission-evaluator.hpp  permission-state.cpp  (+6 more)
tests/: test-helpers.hpp  test-provider-support.hpp
web/: .editorconfig  index.html  package.json  pnpm-lock.yaml  vite.config.ts
xmake/: options.lua  packages.lua  targets.lua  tests.lua
(+697 files in other folders)
